# snake-game-rs

./: CREDITS.md  Cargo.toml
src/: constants.rs  direction.rs  main.rs
