[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["dynamic_linking"] }

# Basic optimizations for development builds.
[profile.dev]
opt-level = 1

# All optimizations for dependencies.
[profile.dev.package."*"]
opt-level = 3
